--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="preview-wrap">
                 <h2 class="slogan">We Take Care of the Future</h2>
                 <p class="preview-text">We know how large objects will act, but things on a small scale.</p>
-                <a href="#" class="preview-btn">Get Quote Now</a>
+                <a href="#" class="preview-btn fill">Get Quote Now</a>
                 <a href="#" class="preview-btn">Learn More</a>
                 <form action="#" method="post">
                     <div>
@@ -137,13 +137,19 @@
                         <p class="member-post">CO Founder</p>
                         <ul class="member-social">
                             <li class="social-item">
-                                <a href="#" class="social-icon"></a>
+                                <a href="#" class="social-icon">
+                                    <img src="/images/facebook.svg" alt="">
+                                </a>
                             </li>
                             <li class="social-item">
-                                <a href="#" class="social-icon"></a>
+                                <a href="#" class="social-icon">
+                                    <img src="/images/insta.svg" alt="">
+                                </a>
                             </li>
                             <li class="social-item">
-                                <a href="#" class="social-icon"></a>
+                                <a href="#" class="social-icon">
+                                    <img src="/images/twitter.svg" alt="">
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -155,13 +161,19 @@
                         <p class="member-post">Consultant</p>
                         <ul class="member-social">
                             <li class="social-item">
-                                <a href="#" class="social-icon"></a>
+                                <a href="#" class="social-icon">
+                                    <img src="/images/facebook.svg" alt="">
+                                </a>
                             </li>
                             <li class="social-item">
-                                <a href="#" class="social-icon"></a>
+                                <a href="#" class="social-icon">
+                                    <img src="/images/insta.svg" alt="">
+                                </a>
                             </li>
                             <li class="social-item">
-                                <a href="#" class="social-icon"></a>
+                                <a href="#" class="social-icon">
+                                    <img src="/images/twitter.svg" alt="">
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -173,13 +185,19 @@
                         <p class="member-post">CEO</p>
                         <ul class="member-social">
                             <li class="social-item">
-                                <a href="#" class="social-icon"></a>
+                                <a href="#" class="social-icon">
+                                    <img src="/images/facebook.svg" alt="">
+                                </a>
                             </li>
                             <li class="social-item">
-                                <a href="#" class="social-icon"></a>
+                                <a href="#" class="social-icon">
+                                    <img src="/images/insta.svg" alt="">
+                                </a>
                             </li>
                             <li class="social-item">
-                                <a href="#" class="social-icon"></a>
+                                <a href="#" class="social-icon">
+                                    <img src="/images/twitter.svg" alt="">
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -235,16 +253,24 @@
             <a href="#" class="logo">Sprivaten</a>
             <ul class="footer-social">
                 <li class="footer-social-item">
-                    <a href="#" class="footer-social-logo"></a>
+                    <a href="#" class="footer-social-logo">
+                        <img src="/images/fb-footer.svg" alt="">
+                    </a>
                 </li>
                 <li class="footer-social-item">
-                    <a href="#" class="footer-social-logo"></a>
+                    <a href="#" class="footer-social-logo">
+                        <img src="/images/insta-footer.svg" alt="">
+                    </a>
                 </li>
                 <li class="footer-social-item">
-                    <a href="#" class="footer-social-logo"></a>
+                    <a href="#" class="footer-social-logo">
+                        <img src="/images/twitter.svg" alt="">
+                    </a>
                 </li>
                 <li class="footer-social-item">
-                    <a href="#" class="footer-social-logo"></a>
+                    <a href="#" class="footer-social-logo">
+                        <img src="/images/youtube.svg" alt="">
+                    </a>
                 </li>
             </ul>
         </div>
