--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="advantages">
             <div  class="advantages-text-auto">
             <h2 class="advantages-text-main">WHY CHOOSE US</h2>
-            <p class="problems-in-all">Problems trying to resolve the conflict between 
+            <p class="problems-in-all">Problems trying to resolve the conflict between<br> 
                 the two major realms of Classical physics: Newtonian mechanics</p>
             </div>
                 <ul class="cards">
@@ -87,11 +87,11 @@
                     </div>
                     <div class="card-bottom-part">
                     <span class="card-description">-  The best products start 
-                        with Figma
-                        - Design with real data
-                        - Lightning fast prototyping
-                        - Fastest way to organize
-                        - Work at the speed of thought.
+                       with Figma<br>
+                        - Design with real data<br>
+                        - Lightning fast prototyping<br>
+                        - Fastest way to organize<br>
+                        - Work at the speed of thought.<br>
                         <a href="#" class="card-more">Learn More</a></span>
                     </div>
                 </li>
@@ -102,11 +102,11 @@
                     </div>
                     <div class="card-bottom-part">
                     <span class="card-description">-  The best products start 
-                        with Figma
-                        - Design with real data
-                        - Lightning fast prototyping
-                        - Fastest way to organize
-                        - Work at the speed of thought.
+                        with Figma<br>
+                        - Design with real data<br>
+                        - Lightning fast prototyping<br>
+                        - Fastest way to organize<br>
+                        - Work at the speed of thought.<br>
                         <a href="#" class="card-more">Learn More</a>
                     </span>
                     </div>
@@ -118,11 +118,11 @@
                     </div>
                     <div class="card-bottom-part">
                     <span class="card-description">-  The best products start 
-                        with Figma
-                        - Design with real data
-                        - Lightning fast prototyping
-                        - Fastest way to organize
-                        - Work at the speed of thought.
+                        with Figma<br>
+                        - Design with real data<br>
+                        - Lightning fast prototyping<br>
+                        - Fastest way to organize<br>
+                        - Work at the speed of thought.<br>
                         <a href="#" class="card-more">Learn More</a>
                      </div>
                     </span>
