Fixed some mistakes

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                 <div class="preview-text-side">
                     <h2 class="slogan">We Take Care of the Future</h2>
                     <p class="preview-text">We know how large objects will act, but things on a small scale.</p>
-                    <div class="btn-flex">
+                    <div class="preview-btn-container">
                         <a href="#" class="preview-btn">Get Quote Now</a>
                         <a href="#" class="preview-btn empty">Learn More</a>
                     </div>
                 </div>
                 <div class="preview-form-container">
                     <form class="preview-form" action="#" method="post">
-                        <label for="form" class="form-name">Book Appointment</label>
+                        <div class="form-name">Book Appointment</div>
                         <div class="name-graph">
                             <label for="name"><strong>Name*</strong></label>
                             <input type="text" id="name" name="user_name" placeholder="Full Name">
@@ -67,10 +67,7 @@
                                 <option>4:00 Available</option>
                             </datalist>
                         </div>
-
-                        <div class="button">
                             <button class="btn" type="submit">Book Appointment</button>
-                        </div>
                     </form>
                 </div>
             </div>
@@ -78,51 +75,51 @@
     </div>
 
     <div class="content-wrapper">
-        <div class="advantages">
+        <div class="advantages-section">
             <div class="advantages-text-auto">
                 <h2 class="advantages-text-main">WHY CHOOSE US</h2>
                 <p class="problems-in-all">Problems trying to resolve the conflict between<br>
                     the two major realms of Classical physics: Newtonian mechanics</p>
             </div>
-            <ul class="cards">
-                <li class="card-item">
+            <section class="cards">
+                <div class="card-item">
                     <div class="card-head-part">
                         <img src="/images/community.svg" alt="" class="card-logo">
                         <p class="card-name">Web Development</p>
                     </div>
                     <div class="card-bottom-part">
-                        <span class="card-description">- The best products start
+                        <p class="card-description">- The best products start
                             with Figma<br>
                             - Design with real data<br>
                             - Lightning fast prototyping<br>
                             - Fastest way to organize<br>
                             - Work at the speed of thought.<br>
-                            <a href="#" class="card-more">Learn More</a></span>
+                            <a href="#" class="card-more">Learn More</a></p>
                     </div>
-                </li>
-                <li class="card-item">
+                </div>
+                <div class="card-item">
                     <div class="card-head-part">
                         <img src="/images/prise.svg" alt="" class="card-logo">
                         <p class="card-name">National top 50 firms</p>
                     </div>
                     <div class="card-bottom-part">
-                        <span class="card-description">- The best products start
+                        <p class="card-description">- The best products start
                             with Figma<br>
                             - Design with real data<br>
                             - Lightning fast prototyping<br>
                             - Fastest way to organize<br>
                             - Work at the speed of thought.<br>
                             <a href="#" class="card-more">Learn More</a>
-                        </span>
+                        </p>
                     </div>
-                </li>
-                <li class="card-item">
+                </div>
+                <div class="card-item">
                     <div class="card-head-part">
                         <img src="/images/book.svg" alt="" class="card-logo">
                         <p class="card-name">Digital Marketing</p>
                     </div>
                     <div class="card-bottom-part">
-                        <span class="card-description">- The best products start
+                        <p class="card-description">- The best products start
                             with Figma<br>
                             - Design with real data<br>
                             - Lightning fast prototyping<br>
@@ -131,24 +128,24 @@
                             <a href="#" class="card-more">Learn More</a>
                     </div>
                     </span>
-                </li>
-            </ul>
+                </div>
+            </section>
         </div>
 
-        <div class="services">
+        <div class="services-section">
             <div class="services-text-auto">
                 <h2 class="services-text-main">We are providing best business service.</h2>
-                <p class="problems-in-all">Problems trying to resolve the conflict between
+                <p class="problems-in-all">Problems trying to resolve the conflict between<br>
                     the two major realms of Classical physics: Newtonian mechanics</p>
             </div>
             <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY">
             </iframe>
         </div>
 
-        <div class="responses">
+        <div class="responses-section">
             <div class="responses-text-auto">
                 <h2 class="responses-text-main">What Clients Say</h2>
-                <p class="problems-in-all">Problems trying to resolve the conflict between
+                <p class="problems-in-all">Problems trying to resolve the conflict between<br>
                     the two major realms of Classical physics: Newtonian mechanics</p>
             </div>
             <div class="responses-pic">
@@ -158,14 +155,14 @@
             </div>
         </div>
 
-        <div class="team">
+        <div class="team-section">
             <div class="team-text-auto">
                 <h2 class="team-text-main">Meet Our Team</h2>
-                <p class="problems-in-all">Problems trying to resolve the conflict between
+                <p class="problems-in-all">Problems trying to resolve the conflict between<br>
                     the two major realms of Classical physics: Newtonian mechanics</p>
             </div>
-            <ul class="our-team">
-                <li class="team-member">
+            <div class="our-team">
+                <div class="team-member">
                     <img src="/images/team1.jpg" alt="" class="member=photo">
                     <div class="member-info">
                         <p class="member-name">Avie Beaton</p>
@@ -188,8 +185,8 @@
                             </li>
                         </ul>
                     </div>
-                </li>
-                <li class="team-member">
+                </div>
+                <div class="team-member">
                     <img src="/images/team2.jpg" alt="" class="member=photo">
                     <div class="member-info">
                         <p class="member-name">Ben Jonson</p>
@@ -212,8 +209,8 @@
                             </li>
                         </ul>
                     </div>
-                </li>
-                <li class="team-member">
+                </div>
+                <div class="team-member">
                     <img src="/images/team3.jpg" alt="" class="member=photo">
                     <div class="member-info">
                         <p class="member-name">Ashley Fletcher</p>
@@ -236,8 +233,8 @@
                             </li>
                         </ul>
                     </div>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
 
         <div class="order">
@@ -313,37 +310,37 @@
                 <ul class="footer-info-items">
                     <li class="footer-info-title">
                         Company Info <ul class="info-title-more">
-                            <li class="title-more-item">About Us</li>
-                            <li class="title-more-item">Carrier</li>
-                            <li class="title-more-item">We are hiring</li>
-                            <li class="title-more-item">Blog</li>
+                            <li><a href="#" class="title-more-link">About Us</a></li>
+                            <li><a href="#" class="title-more-link">Carrier</a></li>
+                            <li><a href="#" class="title-more-link">We are hiring</a></li>
+                            <li><a href="#" class="title-more-link">Blog</a></li>
                         </ul>
                     </li>
 
                     <li class="footer-info-title">
                         Legal <ul class="info-title-more">
-                            <li class="title-more-item">About Us</li>
-                            <li class="title-more-item">Carrier</li>
-                            <li class="title-more-item">We are hiring</li>
-                            <li class="title-more-item">Blog</li>
+                            <li><a href="#" class="title-more-link">About Us</a></li>
+                            <li><a href="#" class="title-more-link">Carrier</a></li>
+                            <li><a href="#" class="title-more-link">We are hiring</a></li>
+                            <li><a href="#" class="title-more-link">Blog</a></li>
                         </ul>
                     </li>
 
                     <li class="footer-info-title">
                         Features <ul class="info-title-more">
-                            <li class="title-more-item">Business Marketing</li>
-                            <li class="title-more-item">User Analytic</li>
-                            <li class="title-more-item">Live Chat</li>
-                            <li class="title-more-item">Unlimited Support</li>
+                            <li><a href="#" class="title-more-link">Business Marketing</a></li>
+                            <li><a href="#" class="title-more-link">User Analytic</a></li>
+                            <li><a href="#" class="title-more-link">Live Chat</a></li>
+                            <li><a href="#" class="title-more-link">Unlimited Support</a></li>
                         </ul>
                     </li>
 
                     <li class="footer-info-title">
                         Resources <ul class="info-title-more">
-                            <li class="title-more-item">IOS & Android</li>
-                            <li class="title-more-item">Watch a Demo</li>
-                            <li class="title-more-item">Customers</li>
-                            <li class="title-more-item">API</li>
+                            <li><a href="#" class="title-more-link">IOS & Android</a></li>
+                            <li><a href="#" class="title-more-link">Watch a Demo</a></li>
+                            <li><a href="#" class="title-more-link">Customers</a></li>
+                            <li><a href="#" class="title-more-link">API</a></li>
                         </ul>
                     </li>
 
@@ -351,7 +348,7 @@
                         Get In Touch
                         <div>
                             <input type="email" id="mail" name="user_email">
-                            <button type="submit">Subscribe</button>
+                            <button type="submit" class="submit btn">Subscribe</button>
                         </div>
                         <p class="lorem">Lorem impsum dolor amit</p>
                     </li>
