--- a/index.html
+++ b/index.html
@@ -131,17 +131,21 @@
                 </div>
             </section>
         </div>
+    </div>
 
+    <div class="content-wrapper">
         <div class="services-section">
-            <div class="services-text-auto">
-                <h2 class="services-text-main">We are providing best business service.</h2>
-                <p class="problems-in-all">Problems trying to resolve the conflict between<br>
-                    the two major realms of Classical physics: Newtonian mechanics</p>
+            <div  class="services-bgc"> 
             </div>
-            <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY">
-            </iframe>
+                <div class="services-text-auto">
+                    <h2 class="services-text-main">We are providing best<br> business service.</h2>
+                    <p class="problems-in-all">Problems trying to resolve the conflict between<br>
+                        the two major realms of Classical physics: Newtonian mechanics</p>
+                </div>
+                <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                </iframe>
         </div>
-
+    </div>
         <div class="responses-section">
             <div class="responses-text-auto">
                 <h2 class="responses-text-main">What Clients Say</h2>
@@ -163,7 +167,7 @@
             </div>
             <div class="our-team">
                 <div class="team-member">
-                    <img src="/images/team1.jpg" alt="" class="member=photo">
+                    <img src="/images/team1.jpg" alt="" class="member-photo">
                     <div class="member-info">
                         <p class="member-name">Avie Beaton</p>
                         <p class="member-post">CO Founder</p>
@@ -187,7 +191,7 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src="/images/team2.jpg" alt="" class="member=photo">
+                    <img src="/images/team2.jpg" alt="" class="member-photo">
                     <div class="member-info">
                         <p class="member-name">Ben Jonson</p>
                         <p class="member-post">Consultant</p>
@@ -211,7 +215,7 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src="/images/team3.jpg" alt="" class="member=photo">
+                    <img src="/images/team3.jpg" alt="" class="member-photo">
                     <div class="member-info">
                         <p class="member-name">Ashley Fletcher</p>
                         <p class="member-post">CEO</p>
@@ -238,45 +242,51 @@
         </div>
 
         <div class="order">
-            <p class="contact">Contact Us</p>
-            <h2 class="order-text-main">Make an Appointment</h2>
-            <div>
-                <input type="text" id="name" name="user_name" placeholder="Full Name">
+            <div class="content-wrapper">
+                <p class="contact">Contact Us</p>
+                <h2 class="order-text-main">Make an Appointment</h2>
+                <form class="order-form">
+                    <div>
+                        <input type="text" id="name" name="user_name" placeholder="Full Name">
+                    </div>
+
+                    <div>
+                        <input type="email" id="mail" name="user_email" placeholder="example@gmail.com">
+                    </div>
+
+                    <input type="text" name="department" id="department" list="suggestion" placeholder="Please Select">
+                    <datalist id="suggestion">
+                        <option>Please Select</option>
+                        <option>Please Select</option>
+                        <option>Please Select</option>
+                    </datalist>
+
+                    <input type="text" name="time" id="time" list="time-suggestion" placeholder="4:00 Available">
+                    <datalist id="time-suggestion">
+                        <option>4:00 Available</option>
+                        <option>4:00 Available</option>
+                        <option>4:00 Available</option>
+                    </datalist>
+
+                    <div>
+                        <textarea id="msg" name="user_message" placeholder="Message"></textarea>
+                    </div>
+
+                        <button class="btn" type="submit">Book Appointment</button>
+                    
+                </form>
             </div>
-
-            <div>
-                <input type="email" id="mail" name="user_email" placeholder="example@gmail.com">
-            </div>
-
-            <input type="text" name="department" id="department" list="suggestion" placeholder="Please Select">
-            <datalist id="suggestion">
-                <option>Please Select</option>
-                <option>Please Select</option>
-                <option>Please Select</option>
-            </datalist>
-
-            <input type="text" name="time" id="time" list="time-suggestion" placeholder="4:00 Available">
-            <datalist id="time-suggestion">
-                <option>4:00 Available</option>
-                <option>4:00 Available</option>
-                <option>4:00 Available</option>
-            </datalist>
-
-            <div>
-                <textarea id="msg" name="user_message" placeholder="Message"></textarea>
-            </div>
-
-            <div class="button">
-                <button class="btn" type="submit">Book Appointment</button>
-            </div>
-            </form>
         </div>
 
 
         <div class="consult-promo">
-            <p class="consult">Consulting Agency For Your Business</p>
-            <p class="consult-idiom">the quick fox jumps over the lazy dog</p>
-            <button class="btn">Contact Us</button>
+            <div class="consult-wrap">
+                <div class="consult-text">
+                    <p class="consult">Consulting Agency For Your Business</p>
+                    <p class="consult-idiom">the quick fox jumps over the lazy dog</p>
+                </div>
+                <button class="btn consult-btn">Contact Us</button>
+            </div>
         </div>
 
 
@@ -355,7 +365,6 @@
                 </ul>
             </div>
         </footer>
-    </div>
 
 </body>
 
